<resources>
    <string name="app_name">LauncherTools</string>

    <!-- [Sen5-Jesseyao-2016-12-07] For GeneralUtils -->
    <string name="cannot_lunch_bluetooth_settings">The device does not support Bluetooth!</string>
    <string name="cant_find_backuprestore_apk">No app found!</string>
    <string name="best_memory_status">Has been cleaned up to the best</string>
    <string name="release_memory">Release memory for</string>
    <string name="currunt_memory">Current memory available is</string>
    <string name="clear_memory">Clear memory</string>
    <string name="tools_skin"> Skin</string>
    <string name="tools_settings"> Settings</string>
    <string name="tools_standby"> Standby</string>
    <string name="tools_reboot"> Reboot</string>
    <string name="tools_usb"> USB</string>
    <string name="tools_sdcard"> SDCard</string>
    <string name="tools_filebrowser">Files</string>
    <string name="tools_network"> Network</string>
    <string name="tools_bluetooth"> Bluetooth</string>
    <string name="tools_clearup">Clear Up</string>
    <string name="tools_secqer_settings">secQre Settings</string>
    <string name="tools_backup_restore">Backup Restore</string>
    <string name="tools_speed_test">Speed Test</string>
    <string name="tools_notification_center">Notification</string>
    <string name="tools_download_center">Download</string>
    <string name="no_bluetooth">The device does not support Bluetooth!</string>
    <string name="no_backuprestore">The device does not support backup and restore!</string>
    <string name="no_wallpaper_settings">Custom wallpaper is not supported!</string>
    <string name="start_receive_notification" translatable="false">Start</string>
    <string name="stop_receive_notification" translatable="false">Stop</string>
    <string name="current_notification" translatable="false">Current List</string>
    <string name="already_has_permission" translatable="false">Already has permisson</string>
    <string name="notification_center">Notifications</string>
    <string name="no_notification">No notification!</string>
    <string name="clear_all_notification">Clear all</string>
    <string name="no_notification_listeners" translatable="false">No notification listeners are installed.</string>
    <string name="notification_listener_security_warning_title" translatable="false">Enable Launcher to receive notification</string>
    <string name="notification_listener_security_warning_summary" translatable="false">
        Launcher will be able to
        read all notifications posted by the system or any installed app, which may include personal
        information such as contact names and the text of messages sent to you. It will also be able
        to dismiss these notifications or touch action buttons within them.
    </string>
    <string name="dialog_reboot_title">Reboot</string>
    <string name="dialog_reboot_message">Sure to restart?</string>
    <string name="dialog_standby_title">Standby</string>
    <string name="dialog_standby_message">Sure to standby?</string>

    <!-- weekday -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!--  For weather and time -->
    <string name="unknow_location">Unknown</string>
    <string name="unknow_temp">U&#186;</string>
    <string name="unknow_weather_condition">Unknown condition</string>
    <string name="weather_dew">Dew point</string>
    <string name="weather_hum">Humidity</string>
    <string name="weather_uv">UV index</string>
    <string name="weather_wind">Wind</string>
</resources>
